@@ -446,7 +446,7 @@ Where:
   </dd>
   <dt>''child''</dt>
   <dd>
-    A keyword to indicate that the last direct descendant <a>'mask element'</a>
+    A keyword to indicate that the last direct child <a>'mask element'</a>
     element of the element the 'mask-image' property is applied should be used as the mask source. It is equivalent to
     ''select(mask:last-of-type)''.</dd>
   <dt>'&lt;child-selector&gt;'</dt>
@@ -1504,7 +1504,7 @@ If the second keyword is absent, it is assumed to be the same as the first.
   </dd>
   <dt>''child''</dt>
   <dd>
-    A keyword to indicate that the last direct descendant <a>'clipPath element'</a>
+    A keyword to indicate that the last direct child <a>'clipPath element'</a>
     element of the element the 'clip-path' property is applied should be used as the clip source. It is equivalent to
     ''select(clipPath:last-of-type)''.</dd>
   <dt>'&lt;child-selector&gt;'</dt>
