@@ -462,7 +462,7 @@
 
    <dt id=TermClippingPath>clipping path
 
-   <dd> A combination of the SVG SVG <a
+   <dd> A combination of SVG <a
     href="http://www.w3.org/TR/2011/REC-SVG11-20110816/intro.html#TermGraphicsElement">graphics
     element</a> or <var>basic shapes</var> which serve as the outline of a
     visual element where everything on the "inside" of the outline is allowed
@@ -730,7 +730,7 @@
 
    <dt>‘<code class=css>child</code>’
 
-   <dd> A keyword to indicate that the last direct sibling <a
+   <dd> A keyword to indicate that the last direct child <a
     class=element-name href="#MaskElement">‘<code
     class=property>mask</code>’</a> element of the element the ‘<a
     href="#mask-image"><code class=property>mask-image</code></a>’ property
@@ -2742,7 +2742,7 @@ div {
 
    <dt>‘<code class=css>child</code>’
 
-   <dd> A keyword to indicate that the last direct sibling <a
+   <dd> A keyword to indicate that the last direct child <a
     class=element-name href="#ClipPathElement">‘<code
     class=property>clipPath</code>’</a> element of the element the ‘<a
     href="#clip-path"><code class=property>clip-path</code></a>’ property
