@@ -1,4 +1,7 @@
 2013-04-02  Dirk Schulze  <dschulze@adobe.com>
+	descendant is not correct either, should be child to be precise.
+
+2013-04-02  Dirk Schulze  <dschulze@adobe.com>
 	Sibling should be descendant on selector() and child value for mask-image and clip-path.
 
 2013-04-02  Dirk Schulze  <dschulze@adobe.com>
